--- a/VpnManager.csproj
+++ b/VpnManager.csproj
@@ -19,8 +19,6 @@
         <PackageReference Include="Tomlyn" Version="0.15.0" />
     </ItemGroup>
     <ItemGroup>
-        <Content Include="resources\*.*">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </Content>
+        <EmbeddedResource Include="resources\**\*" />
     </ItemGroup> 
 </Project>
