Use P/Invoke CreateIpForwardEntry for routes

--- a/resources/config.toml
+++ b/resources/config.toml
@@ -1,3 +1,6 @@
 vpn_expected_address = "x.x.x.x" # The public ip address when routing through VPN
-vpn_net_device_name = "VpnDevice" # The name of the VPN's network device
-routes_to_change = ["0.0.0.0/1", "128.0.0.0/1"] # Network ranges to override
+vpn_if_index = 50 # The index of the VPN's network device
+vpn_next_hop = "10.0.0.5" # IP address for route's next hop
+route_to_change = "0.0.0.0" # IP Address of route
+route_mask = "0.0.0.0" # Network Mask for route
+route_metric = 10 # Cost of using route, should be lower than all others
