--- a/VpnManager.csproj
+++ b/VpnManager.csproj
@@ -3,18 +3,14 @@
         <TargetFramework>net6.0-windows10.0.17763.0</TargetFramework>
         <UseWindowsForms>true</UseWindowsForms>
         <ApplicationIcon>resources/icons/off.ico</ApplicationIcon>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-        <OutputType>Exe</OutputType>
-        <DebugType>full</DebugType>
-        <OutputPath>bin\debug\</OutputPath>
+        <NoWarn>NU1701</NoWarn>
+        <EnableWindowsTargeting>true</EnableWindowsTargeting>
+        <RestoreFallbackFolders>clear</RestoreFallbackFolders>
+        <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <OutputType>WinExe</OutputType>
-        <DebugType>none</DebugType>
-        <OutputPath>bin\release\</OutputPath>
-        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <OutputPath>bin\</OutputPath>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.2" />
