Add option to specify hostname for ip address lookup

--- a/resources/config.toml
+++ b/resources/config.toml
@@ -5,3 +5,4 @@ route_to_change = "0.0.0.0" # IP Address of route
 route_mask = "0.0.0.0" # Network Mask for route
 route_metric_off = 100 # Cost of using route when VPN routing is off, should be higher than all others
 route_metric_on = 10 # Cost of using route when VPN routing is on, should be lower than all others
+get_ip_url_host = "ifconfig.me" # On a GET request, should return only the IP address in plain-text
